data/css/style.css
body {
	background:#202020;
	font-family: Helvetica;
	padding-top:20px;
}

.content * {
	font-family: "Segoe UI", Tahoma, Arial, Helvetica, Verdana,sans-serif;
	font-size:10pt;
}

.title {
	color: white;
	font-size: 24pt;
}

.title a {
	color: white;
	text-decoration:none;
}

div.menu {
	margin-bottom:12px;
}

.menuitem {
	background:#CCC;
	padding:3px 12px;
	margin-right:6px;
}

.menuitem:hover {
	background:#AAA;
}

.menuitem a {
	text-decoration:none;
	color:black;
}

.activemenu {
	background:#444;
}
.activemenu a {
	color:white;
}

div.content {
	margin-top:3px;
	background:white;
	padding:12px;
}

table.notifications * a, table.alarms * a {
	text-decoration:none;
}

.systemMap table th {
	background:#777;
	background: -moz-linear-gradient(top, #fff, #bbb);
	background: -webkit-linear-gradient(top, #fff, #bbb);
	background: -o-linear-gradient(top, #fff, #aaa);
	background: -ms-linear-gradient(top, #fff, #aaa);
	color:black;
	font-family:'Arial Narrow', sans-serif;
	font-weight:normal;
	font-size:9pt;
	border-right:1px solid #aaa;
	padding:3px;
}

.source {
	background:#ccc;
}

.notification {
	background:#eee;
}

.notification td:empty {
	background:white;
}

.announcement {
	background:#eee;
}

.announcement td:empty {
	background:white;
}

.running {
	background:#AAF;
}

.error {
	background:#F77;
}

.timeout {
	background:#FA4;
}

.warning {
	background:#FF7;
}

.finished {
	background:#7F7;
}

.started {
	background:#eee;
}

.announced {
	background:#FF7;
}

.clear {
	clear:both;
}

#mapCanvas {
	border:1px solid black;
	margin:6px 0;
	padding:6px;
}

.systemMap .header {
	background:#444;
	background: -moz-linear-gradient(top, #777, #000);
	background: -webkit-linear-gradient(top, #777, #000);
	background: -o-linear-gradient(top, #777, #000);
	background: -ms-linear-gradient(top, #777, #000);
	color:white;
	padding:3px 12px;
	border-top-left-radius:6px;
	border-top-right-radius:6px;
	font-size:12pt;
	font-family:'Arial Narrow', sans-serif;
	font-weight:normal;

}

.systemMap .header a {
	text-decoration:none;
	color:white;
}

.systemMap .header a:hover {
	text-decoration:none;
	color:#444;
	background:white;
}

.systemMap {
	border:1px solid #444;
	float:left;
	margin:6px 6px 0 0;
	padding:0;
	border-radius:6px;
}

.systemMap div.visualize {
	margin:6px 6px 6px 48px;
}	

.systemMap table {
	border:0;
}

.systemMap table * td {
	padding:3px 6px;
}

.systemMap table * td a:hover {
	background:#444;
	color:white;
}

tr.host, tr.component, tr.interface {
	background:#ddd;
}

.hostMap * a, .componentMap * a, .interfaceMap * a {
	text-decoration:none;
	display:block;
	color:black;
}

tr.componentInstance td:first-child, tr.interfaceInstance td:first-child {
	padding-left:24px;
}

td.calls {
	background:#7f7;
}

tr.componentInstance td.calls, tr.interfaceInstance td.calls {
	background:#afa;
}

td.critical, td.error {
	background:#f44;
}

tr.componentInstance td.error, tr.interfaceInstance td.error {
	background:#fcc;
}

tr.componentInstance td.timeout, tr.interfaceInstance td.timeout {
	background:#fea;
}

div.visualize {
	float: left;
	margin-left:32px;
	margin-bottom:32px;
}

.visualize-labels-x * {
	display:none;
	visibility:hidden;
}

table.graph {
	display:none;
	visibility:hidden;
}

div.config form table, div.config table {
	border-collapse:collapse;
	border-spacing:0;
	margin:6px 0;
}

div.config table td {
	border:1px solid black;
	padding:3px;
}

div.config table.checks th {
	border:1px solid black;
	background:#CCC;
	padding:3px 12px;
	font-weight:normal;
}

div.config form table td:first-child {
	background:#CCC;
	padding:3px 12px;
}

.alarms tr.critical td {
	background:#FAA;
}

.alarms tr.critical td.severity {
	background:#F44;
}

.alarms tr.warning td {
	background:#FFA;
}

.alarms tr.warning td.severity {
	background:#FF4;
}

.alarms td {
	padding:0 6px;
}

.alarms .severity {
	text-transform:uppercase;
}

.legend {
	float:right;
}

.spurtypes tr.path td:first-child {
	padding-left:12px;
}
.spurtypes tr.path td:last-child {
	padding-right:12px;
}


.spurtypes tr.path td {
	padding:12px 0;
}

.spurtypes tr.path td hr {
	margin-top:3px;
}

.componentLabel {
	border:1px solid #444;
	border-radius:6px;
	padding:6px;
	background:#ccc;
}

.interfaceLabel {
	text-decoration:none;
	padding:0 3px;
}

.interfaceMetrics {
	padding:6px 24px;
}

td.spurConnector {
	background-image:url(../images/hr.png);
}

td.spurConnector .hidden {
	visibility:hidden;
}

.leftSpurConnector {
	background-image:url(../images/vr.png);
	background-repeat:no-repeat;
	background-position:right;
}

.rightSpurConnector {
	background-image:url(../images/vr.png);
	background-repeat:no-repeat;
	background-position:left;
}

td.zero, td.zero * {
	color:gray;
}

